<?xml version="1.0"?>
<package format="2">
	<name>ref_provider</name>
	<version>0.0.0</version>
	<description>The R_LOAM package</description>

	<!-- One maintainer tag required, multiple allowed, one person per tag -->
	<!-- Example:  -->
	<!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
	<maintainer email="jacklee0575@todo.todo">jacklee0575</maintainer>


	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<license>TODO</license>
	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<exec_depend>roscpp</exec_depend>
	<build_depend>rospy</build_depend>
	<exec_depend>rospy</exec_depend>

	<build_depend>pcl_conversions</build_depend>
	<exec_depend>pcl_conversions</exec_depend>

	<build_depend>std_msgs</build_depend>
	<exec_depend>std_msgs</exec_depend>
	<build_depend>sensor_msgs</build_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<build_depend>geometry_msgs</build_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<build_depend>nav_msgs</build_depend>
	<exec_depend>nav_msgs</exec_depend>

	<build_depend>message_generation</build_depend>
	<exec_depend>message_generation</exec_depend>
	<build_depend>message_runtime</build_depend>
	<exec_depend>message_runtime</exec_depend>
	<build_depend>message_filters</build_depend>
	<exec_depend>message_filters</exec_depend>

	<build_depend>ref_liom</build_depend>
	<build_export_depend>ref_liom</build_export_depend>
	<exec_depend>ref_liom</exec_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->

	</export>
</package>